--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="title">
+      <h1>My Portfolio</h1>
+      <h3>~ Three.js is fun ~</h3>
+    </div>
     <script src="main.js" type="module"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"
